N - Desing and structure modifications

--- a/assets/styles/header.module.css
+++ b/assets/styles/header.module.css
@@ -2,3 +2,17 @@
     background-image: url('../images/genetic_2.jpg');
     background-size: cover;
 }
+
+.header{
+    font-size: 4em;
+    color: white;
+    border-bottom: 2px solid white;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.subtitle {
+    color: #209CEE;
+    font-size: 2em;
+    text-align: center;
+}
